Added the addNewProduct funcionality. It has left to get the getDownloadUrl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,14 @@
     <string name="tvAddFurnitureAdmin">Añadir Muebles</string>
     <string name="tvAddElectronicsAdmin">Añadir Electrónica</string>
     <string name="tvAddNewProductActivity">Añadir nuevo producto</string>
-    <string name="tvAddNewProductType">Tipo de Producto:</string>
+    <string name="tvAddNewProductType">Tipo de Producto: </string>
     <string name="etAddNewProductName">Nombre del producto</string>
     <string name="etAddNewProductVendor">Vendedor</string>
     <string name="etAddNewProductPrice">Precio</string>
     <string name="etAddNewProductQuantity">Cantidad</string>
     <string name="btnAddNewProductText">Añadir Nuevo Producto</string>
+    <string name="productImagePopup">¿Elige una opcion para añadir una foto del producto?</string>
+    <string name="productImagePopupCamera">Camara</string>
+    <string name="productImagePopupGallery">Galería</string>
 
 </resources>
