--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,22 @@
     <string name="productImagePopup">¿Elige una opcion para añadir una foto del producto?</string>
     <string name="productImagePopupCamera">Camara</string>
     <string name="productImagePopupGallery">Galería</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_cart">Carrito</string>
+    <string name="menu_orders">Ordenes</string>
+    <string name="menu_settings">Opciones</string>
+    <string name="menu_logout">Cerrar Sesión</string>
+    <string name="menu_sellProduct">Vender Producto</string>
+    <string name="homeTitle">Inicio</string>
 
 </resources>
