Added in the Cart Activity and the product display on it with the add to the Firebase of adding more than one product to the cart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,13 @@
     <string name="phone_number_hint_etSettingsPassword">Password...</string>
     <string name="btnSettingsIsVendorFalse">Pulsa aqui para ser vendedor</string>
     <string name="btnSettingsIsVendorTrue">Pulsa aqui para no ser vendedor</string>
+    <string name="productDetailActivityCantidad">Cantidad:</string>
+    <string name="productDetailActivityType">Tipo:</string>
+    <string name="productDetailActivityVendor">Vendedor:</string>
+    <string name="productDetailActivityPrice">Precio:</string>
+    <string name="btnAddToCart">Añadir al Carrito</string>
+    <string name="tvTotalPriceCart">Precio Total:</string>
+    <string name="buttonNextCart">Siguiente</string>
+    <string name="tvNoProductsInCart">No hay ningún producto en el carrito</string>
 
 </resources>
