Added some changes in the Cart with the addition of the creation of orders when the user complete their order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,8 @@
     <string name="tvTotalPriceCart">Precio Total:</string>
     <string name="buttonNextCart">Siguiente</string>
     <string name="tvNoProductsInCart">No hay ningún producto en el carrito</string>
+    <string name="etConfirmOrderName">Name...</string>
+    <string name="etConfirmAddress">Address...</string>
+    <string name="etConfirmCityName">City Name...</string>
 
 </resources>
