Added the Add New Product Activity for the Vendor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,7 @@
     <string name="etConfirmAddress">Address...</string>
     <string name="etConfirmCityName">City Name...</string>
     <string name="tvNoOrders">No hay ordenes. ¡Compra ya!</string>
+    <string name="tvNoPermission">No tienes suficientes permisos para poder vender ningún producto</string>
+    <string name="etAddNewProductType">Tipo</string>
 
 </resources>
